Add c examples and a few more makefile targets

--- a/pointers/makefile
+++ b/pointers/makefile
@@ -1,9 +1,14 @@
 
 all:
-	g++ *.cpp -o pointers
+	g++ -g -std=c++11 *.cpp -o pointers
 
 run: all
 	./pointers
+
+r:run
+
+valgrind:all
+	valgrind ./pointers
 
 clean:
 	rm pointers
